# pan-code

./: .gitignore  LICENSE  README.md
clef12/source-retrieval/: pan12-source-retrieval-baseline.py
clef12/text-alignment/: pan12-text-alignment-baseline.py
clef13/: unit-test-ap-ubuntu.sh  unit-test-ap-windows.sh  unit-test-ta-windows.sh
clef13/authorship-verification/: pan13-authorship-verification-eval.py  pan13-authorship-verification-example.py
clef13/source-retrieval/: pan13-source-retrieval-eval.py
clef13/text-alignment/: pan13-text-alignment-eval.py  pan13-text-alignment-eval2.py  pan13-text-alignment-perfmeasures.py
clef13/validators/: unit-test-ai-ubuntu.sh  unit-test-ai-windows.sh  unit-test-sr-ubuntu.sh  unit-test-sr-windows.sh  unit-test-ta-ubuntu.sh
clef14/author-profiling/: pan14-author-profiling-eval.py  pan14-author-profiling-validator.py  submission-eval-author-profiling.txt
clef14/authorship-verification/: pan14-authorship-verification-validator.py  pan14_authorship_verification_eval.m  pan14_authorship_verification_eval_compute_roc.m  submission-eval-authorship-verification.txt
clef14/source-retrieval/: pan14-source-retrieval-eval.py  submission-eval-source-retrieval.txt
clef14/text-alignment/: pan14-text-alignment-eval.py  (+2 more)
clef23/: Dockerfile  Makefile  README.md  requirements.txt
clef24/generative-authorship-verification/pan24_llm_baselines/: Dockerfile  baseline.py  pyproject.toml
clef24/generative-authorship-verification/pan24_llm_baselines/detectors/: detector_base.py  unmasking.py
clef24/generative-authorship-verification/pan24_llm_baselines/pan24_llm_baselines/: baseline.py  perturb_cache.py  util.py
clef24/generative-authorship-verification/pan24_llm_baselines/pan24_llm_baselines/detectors/: __init__.py  binoculars.py  detectgpt.py  detectllm.py  fastdetectgpt.py  ppmd.py  unmasking.py
clef24/generative-authorship-verification/pan24_llm_baselines/pan24_llm_baselines/perturbators/: __init__.py  perturbator_base.py  t5_mask.py
clef24/generative-authorship-verification/pan24_llm_baselines/perturbators/: perturbator_base.py  t5_mask.py
clef24/generative-authorship-verification/pan24_llm_evaluator/: Dockerfile  pyproject.toml
clef24/generative-authorship-verification/pan24_llm_evaluator/pan24_llm_evaluator/: evaluator.py
clef25/generated-plagiarism-detection/pan25-baseline/: README.md  cosine_baseline.py  cosine_baseline.sh  embeddings.py  embeddings.sh  eval.py  eval.sh  pyproject.toml
clef25/generated-plagiarism-detection/pan25-baseline/results/: cosine_embeddings_comparison.csv  cosine_embeddings_embeddings_Alibaba-NLP_gte-Qwen2-7B-instruct_results.txt  cosine_embeddings_embeddings_Linq-AI-Research_Linq-Embed-Mistral_results.txt  cosine_embeddings_embeddings_meta-llama_Llama-3.3-70B-Instruct_results.txt  random_results.txt
clef25/generative-authorship-verification/pan25_genai_baselines/: .dockerignore  Dockerfile  README.md  build-docker.sh  pyproject.toml
clef25/generative-authorship-verification/pan25_genai_baselines/pan25_genai_baselines/: __init__.py  binoculars.py  cli.py  detector_base.py  ppmd.py  tfidf.py  tfidf_model.pkl
fire13/: SOCO.14.tar.gz.gpg  SOCO14-java.qrel  soco14-test-java-update.qrel
fire14/: SOCO14-c.qrel  soco14-test-c-update.qrel  soco14-update.py
fire15/: CL.SOCO.15.test.tar.gz.gpg  clsoco15-eval.py  clsoco15-training-corpus.qrel  example-results-train.xml
ir-measures-evaluator/: Dockerfile  Makefile  tira-ir-measures-evaluator.py
semeval19/: semeval-pan-2019-evaluator.py  semeval-pan-2019-meta-evaluator.py  semeval-pan-2019-meta-majority-vote-baseline.py  semeval-pan-2019-meta-random-baseline.py  semeval-pan-2019-random-baseline.py  semeval-pan-2019-tf-extractor.py
semeval23/: Dockerfile  Makefile  README.md  available-team-names.md  clickbait-spoiling-eval.py  generate-latex-tables.ipynb  test_input_for_task_1.py  test_input_for_task_2.py  transform_tira_data.py
sepln09/: pan09-plagiarism-detection-performance-measures.py
(+341 files in other folders)
